Add favicon and "Learn More" link to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Forecast WebApp</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" type="image/png" href="./img/logo.png" />
   </head>
   <body>
     <div class="container">
@@ -29,6 +30,10 @@
           <div>Wind Speed: 5 m/s</div> -->
         </div>
       </div>
+    </div>
+
+    <div class="learn-more">
+      <p><a target="_blank" href="learn_more.html">Learn More</a></p>
     </div>
 
     <script src="script.js"></script>
