--- a/learn_more.html
+++ b/learn_more.html
@@ -108,7 +108,8 @@
         href="https://openweathermap.org/api/one-call-3">API 3.0</a> to develop the <a href="index.html">Weather Forecast WebApp</a>. All data is fetched by
       there
       cloud system and lands on our webpage.
-      &copy;openweathermap.org
+      openweathermap.org <br />
+      &copy; Aditya
     </div>
   </footer>
 </body>
